--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
 <body>
   <!-- 建立一個下拉選單 -->
   <select id="modelSelect">
-    <option value="model1.gltf">模型 1</option>
-    <option value="model2.gltf">模型 2</option>
+    <option value="alice.glb">愛麗ㄙ</option>
+    <option value="Astronaut.glb">愛ㄙ安特</option>
+    <option value="buddha.glb">半袋哈</option>
+    <option value="stacy_lightweight.glb">ㄕ黛西</option>
+    <option value="2025_3_14.glb">誰是最棒的小蛋糕</option>
   </select>
 
   <script>
