--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </style>
 </head>
 <body>
-  <!-- 下拉選單，選項的 value 為模型檔名 -->
+  <!-- 下拉選單，value 為模型檔名 -->
   <select id="modelSelect">
     <option value="alice.glb">愛麗ㄙ</option>
     <option value="Astronaut.glb">愛ㄙ安特</option>
@@ -50,12 +50,12 @@
       if (currentModel) {
         scene.remove(currentModel);
       }
-      // 從 "3DViewer/models/" 資料夾載入指定的模型檔案
+      // 使用相對路徑從 "3DViewer/models" 資料夾載入指定模型檔案
       loader.load("3DViewer/models/" + modelFile, function(glb) {
         currentModel = glb.scene;
-        // 調整位置與比例，確保模型在攝影機視野內
+        // 調整模型位置與比例，確保在攝影機視野內
         currentModel.position.set(0, 0, 0);
-        currentModel.scale.set(1, 1, 1); // 如有需要請依模型大小調整
+        currentModel.scale.set(1, 1, 1);
         scene.add(currentModel);
       }, undefined, function(error) {
         console.error("載入模型時發生錯誤：", error);
@@ -65,7 +65,7 @@
     // 預設載入 2025_3_14.glb 模型
     loadModel("2025_3_14.glb");
 
-    // 監聽下拉選單，當選擇變更時載入對應模型
+    // 當選擇變更時，根據選項載入對應的模型
     const modelSelect = document.getElementById('modelSelect');
     modelSelect.addEventListener('change', function(event) {
       loadModel(event.target.value);
@@ -81,7 +81,7 @@
     }
     animate();
 
-    // 畫面尺寸變更時更新攝影機與渲染器設定
+    // 畫面尺寸變更時更新攝影機與渲染器
     window.addEventListener('resize', () => {
       camera.aspect = window.innerWidth / window.innerHeight;
       camera.updateProjectionMatrix();
@@ -90,4 +90,3 @@
   </script>
 </body>
 </html>
- 
