--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <option value="Astronaut.glb">愛ㄙ安特</option>
         <option value="buddha.glb">半袋哈</option>
         <option value="stacy_lightweight.glb">ㄕ黛西</option>
-        <option value="models/2025_3_14.glb">誰是最棒的小蛋糕</option>
+        <option value="3DViewer/models/2025_3_14.glb">誰是最棒的小蛋糕</option>
       </select>
     </div>
 
