--- a/index.html
+++ b/index.html
@@ -10,60 +10,112 @@
     body {
       margin: 0;
       padding: 20px;
-      font-family: Arial, sans-serif;
+      font-family: 'Helvetica Neue', Arial, sans-serif;
       text-align: center;
+      background-color: #f0f0f0;
+    }
+    .container {
+      max-width: 600px;
+      margin: 0 auto;
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+    header h1 {
+      margin-bottom: 20px;
     }
     .model-container {
-      margin: 20px auto;
-      max-width: 500px;
+      margin: 20px 0;
     }
-    select {
-      font-size: 1rem;
-      padding: 5px 10px;
-      margin-top: 20px;
+    .custom-select-wrapper {
+      position: relative;
+      display: inline-block;
+    }
+    select.custom-select {
+      appearance: none;
+      -webkit-appearance: none;
+      background-color: #fff;
+      border: 2px solid #ccc;
+      padding: 10px 40px 10px 15px;
+      font-size: 16px;
+      border-radius: 5px;
+      outline: none;
+      cursor: pointer;
+    }
+    select.custom-select:focus {
+      border-color: #007BFF;
+    }
+    .custom-select-wrapper::after {
+      content: "▼";
+      font-size: 12px;
+      color: #666;
+      position: absolute;
+      top: 50%;
+      right: 15px;
+      transform: translateY(-50%);
+      pointer-events: none;
+    }
+    button.custom-button {
+      background-color: #007BFF;
+      color: #fff;
+      border: none;
+      padding: 10px 20px;
+      font-size: 16px;
+      border-radius: 5px;
+      cursor: pointer;
+      margin-left: 10px;
+      transition: background-color 0.3s ease;
+    }
+    button.custom-button:hover {
+      background-color: #0056b3;
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>3D 模型選擇展示</h1>
-  </header>
+  <div class="container">
+    <header>
+      <h1>3D 模型選擇展示</h1>
+    </header>
 
-  <main>
-    <!-- 下拉選單 -->
-    <div>
-      <select id="modelSelector">
-        <option value="alice.glb">愛麗ㄙ</option>
-        <option value="Astronaut.glb">愛ㄙ安特</option>
-        <option value="buddha.glb">半袋哈</option>
-        <option value="stacy_lightweight.glb">ㄕ黛西</option>
-        <option value="3DViewer/models/2025_3_14.glb">誰是最棒的小蛋糕</option>
-      </select>
-    </div>
+    <main>
+      <div>
+        <div class="custom-select-wrapper">
+          <select id="modelSelector" class="custom-select">
+            <option value="3DViewer/models/alice.glb">愛麗ㄙ</option>
+            <option value="3DViewer/models/Astronaut.glb">愛ㄙ安特</option>
+            <option value="3DViewer/models/buddha.glb">半袋哈</option>
+            <option value="3DViewer/models/stacy_lightweight.glb">ㄕ黛西</option>
+            <option value="3DViewer/models/2025_3_14.glb">誰是最棒的小蛋糕</option>
+          </select>
+        </div>
+        <button id="loadModel" class="custom-button">載入模型</button>
+      </div>
 
-    <!-- 模型展示區 -->
-    <div class="model-container">
-      <model-viewer id="viewer"
-                    src="alice.glb"
-                    alt="3D 模型"
-                    auto-rotate
-                    camera-controls
-                    style="width: 100%; height: 400px;">
-      </model-viewer>
-    </div>
-  </main>
+      <div class="model-container">
+        <model-viewer id="viewer"
+                      src="3DViewer/models/alice.glb"
+                      alt="3D 模型"
+                      auto-rotate
+                      camera-controls
+                      style="width: 100%; height: 400px;">
+        </model-viewer>
+      </div>
+    </main>
 
-  <footer>
-    <p>版權所有 &copy; 2025</p>
-  </footer>
+    <footer>
+      <p>版權所有 &copy; 2025</p>
+    </footer>
+  </div>
 
-  <!-- JavaScript 用來監聽下拉選單的變動，更新 model-viewer 的 src -->
+  <!-- JavaScript 根據選擇更新模型路徑 -->
   <script>
     const modelSelector = document.getElementById('modelSelector');
+    const loadModelButton = document.getElementById('loadModel');
     const viewer = document.getElementById('viewer');
 
-    modelSelector.addEventListener('change', function() {
-      viewer.src = this.value;
+    loadModelButton.addEventListener('click', function() {
+      viewer.src = modelSelector.value;
     });
   </script>
 </body>
